client/src/App.css
/* ... */
.image-select-modal__image-author-pfp {
  border-radius: 50%;
  width: 48px;
  height: 48px;
  object-fit: cover;
}
.image-select-modal__image-author-pfp::after {
  opacity: 0;
  background-color: #000;
  position: absolute;
  top: 0;
  left: 0;
  border-radius: 50%;
  width: 48px;
  height: 48px;
  content: "";
  z-index: 10000000000000000;
  transition: 0.25s;
}
.image-select-modal__image-author-pfp-div:hover
  .image-select-modal__image-author-pfp::after {
  opacity: 0.4 !important;
  transition: 0.25s;
}
.image-select-modal__image-author-pfp {
  border-radius: 50%;
  width: 48px;
  height: 48px;
  object-fit: cover;
}
.image-select-modal__image-author-name {
  color: var(--dark2);
}
.image-select-modal__image-author-name:hover {
  color: var(--dark2);
}
.image-select-modal__top-bar-buttons-container {
  display: flex;
  flex-wrap: wrap;
  gap: 0.75rem;
}
.image-select-modal__main-like-button {
  display: flex;
  outline: 1px var(--greyBorder1) solid;
  justify-content: center;
  align-items: center;
  border-radius: 5px;
  padding: 0.5rem 1rem;
  gap: 0.5rem;
  font-size: 1.2rem;
  transition: outline 0.2s;
}
.image-select-modal__main-like-button:hover {
  outline: 1px var(--dark3) solid;
  transition: outline 0.2s;
}
.image-select-modal__main-like-button-icon-unliked {
  border-radius: 10px;
  pointer-events: none;
  z-index: 100;
  color: #b4b4b4;
}
.image-select-modal__main-like-button-icon-liked {
  color: red;
  z-index: 105;
  position: relative;
  animation: image-view-page__main-like-button-animation-big 0.4s;
}
@keyframes image-view-page__main-like-button-animation-big {
  from {
    transform: scale(1.2);
    color: rgb(234, 1, 1);
  }
  to {
    transform: scale(1);
    color: red;
  }
}
@keyframes image-view-page__main-like-button-animation-small {
  from {
    transform: scale(1.3);
    color: rgb(234, 1, 1);
  }
  to {
    transform: scale(1);
    color: red;
  }
}
.image-select-modal__download-button {
  display: flex;
  background-color: rgb(13, 149, 127);
  color: white;
  justify-content: center;
  border-radius: 5px;
  padding: 0.5rem 1rem;
  gap: 0.2rem;
  font-size: 1.2rem;
  font-weight: 500;
  transition: background-color 0.1s;
}
.image-select-modal__download-button:hover {
  color: #fff;
  background-color: rgb(16, 138, 117);
  transition: background-color 0.2s;
}
@media (width < 650px) {
  .image-select-modal__main-like-button {
    font-size: 1rem;
  }
  .image-select-modal__main-like-button-icon-liked {
    animation: image-view-page__main-like-button-animation-small 0.4s;
  }
  .image-select-modal__main-like-button-text {
    display: none;
  }
  /* .image-select-modal__download-button {
    font-size: 0.8rem;
    padding: 0.25rem 0.75rem;
  } */
}
.image-select-modal__edit-btn {
  background-color: #d9d9d9;
  color: var(--dark2);
  font-size: 1.3rem;
  padding: 0.5rem 1rem;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 5px;
}
.image-select-modal__edit-btn:hover {
  background-color: #d2d2d2;
  color: #272e35;
}
.image-select-modal__delete-btn {
  background-color: #b20000;
  color: #f6f6f6;
  font-size: 1.3rem;
  padding: 0.5rem 1rem;
  display: flex;
  height: 44.79px;
  justify-content: center;
  align-items: center;
  border-radius: 5px;
}
.image-select-modal__delete-btn:hover {
  background-color: #a30000;
  color: #eeeeee;
}
.image-select-modal__delete-yes-or-no {
  background-color: #b20000;
  color: #fff;
  display: flex;
  flex-direction: column;
  align-items: center;
  border-radius: 8px;
  padding: 1rem;
  max-width: 240px;
  position: absolute;
  top: 80px;
  right: 24px;
}
.image-select-modal__delete-yes-or-no::before {
  border: 17px solid rgba(0, 0, 0, 0);
  border-top: 27px solid #b20000;
  content: "";
  transform: rotate(180deg);
  top: -32px;
  right: 12px;
  position: absolute;
}
.image-select-modal__delete-yes-or-no-btns {
  display: flex;
  gap: 0.5rem;
  margin-top: 0.5rem;
}
.image-select-modal__delete-yes-or-no-btns button {
  background-color: #fff;
  color: #b20000;
  padding: 0.5rem 1rem;
  border-radius: 4px;
}
.image-select-modal__delete-yes-or-no-btns button:hover {
  background-color: #ececec;
  color: #a30000;
}
.image-select-modal__img-container {
  /* width: 100%; */
  max-width: 100%;
  /* min-height: 500px; */
  max-height: 500px;
  margin: auto;
  margin-top: 1rem;
  margin-bottom: 2rem;
  display: flex;
  justify-content: center;
  overflow: hidden;
  /* background-color: rebeccapurple; */
}
.image-select-modal__img-height-spacing {
  height: 500px;
}
.image-select-modal__img-zoomed-out {
  /* margin: auto; */
  max-height: 500px;
  max-width: 100%;
  object-fit: contain;
  cursor: zoom-in;
}
.image-select-modal__img-zoomed-in {
  transform: scale(3);
  transition: transform 0.1s;
  /* transform-origin: center center; */
  /* transform: translate3d(250px, 200px, 0); */
  /* margin: auto; */
  max-height: 1500px;
  max-width: 100%;
  object-fit: contain;
  cursor: zoom-out;
}
@media (width < 900px) {
  .image-select-modal__img-container {
    max-height: 100%;
    height: 100%;
  }
  .image-select-modal__img-container img {
    max-height: 100%;
    max-width: 100%;
  }
  .image-select-modal__img-height-spacing {
    display: none;
  }
}
.image-select-modal__img-info-container {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  align-items: flex-start;
  gap: 1rem;
  width: 100%;
}
@media (width < 650px) {
  .image-select-modal__img-info-container {
    flex-direction: column;
    align-items: flex-start;
    gap: 1rem;
  }
}
.image-select-modal__img-title {
  width: 100%;
  font-size: 2.25rem;
  font-weight: 500;
  word-wrap: break-word;
  line-height: 1.65;
  /* max-width: 48%; */
}
.image-select-modal__img-title-input {
  border-radius: 2px;
  color: #000;
  width: 100%;
  font-size: 2.25rem;
  font-weight: 500;
  padding: 0.25rem 1rem;
  word-wrap: break-word;
  line-height: 1.65;
  /* max-width: 48%; */
}
/* ... */

